ajouter plusieurs pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="princip_ul" >
                 <li><a href="#" class="active" >Home  </a></li>
                 <li>
-                  <a href="#">Sony ▾</a>
+                  <a href="sony.html">Sony ▾</a>
                   <ul class="dropdown">
                    <li><a href="#">PS1</a></li>
                    <li><a href="#">PS2</a></li>
@@ -31,7 +31,7 @@
                   </ul>
                   </li>
                 <li>
-                  <a href="#">Nintendo ▾ </a>
+                  <a href="nintendo.html">Nintendo ▾ </a>
                   <ul class="dropdown">
                     <li><a href="#">game boy</a></li>
                     <li><a href="#">SNES</a></li>
@@ -40,7 +40,7 @@
                    </ul>
        
                 </li>
-                <li><a href="#">Sega ▾ </a>
+                <li><a href="sega.html">Sega ▾ </a>
                   <ul class="dropdown">
                     <li><a href="#">master system</a></li>
                     <li><a href="#">mega  drive</a></li>
@@ -48,7 +48,7 @@
                     <li><a href="#">dreamcast</a></li>
                    </ul>
                 </li>
-                <li><a href="#">Microsoft ▾ </a>
+                <li><a href="microsoft.html">Microsoft ▾ </a>
                   <ul class="dropdown">
                     <li><a href="#">Xbox360</a></li>
                     <li><a href="#">Xbox</a></li>
@@ -99,10 +99,10 @@ We will help gamers to buy and profite with thier games</pre>
             <div class="col-xs-6 col-md-3">
               <h6>Categories</h6>
               <ul class="footer-links">
-                <li><a href="#">SONY</a></li>
-                <li><a href="#">SEGA </a></li>
-                <li><a href="#">MICROSOFT</a></li>
-                <li><a href="#">NINTENDO</a></li>
+                <li><a href="sony.html">SONY</a></li>
+                <li><a href="sega.html">SEGA </a></li>
+                <li><a href="microsoft.html">MICROSOFT</a></li>
+                <li><a href="nintendo.html">NINTENDO</a></li>
                 
               </ul>
             </div>
