--- a/nintendo.html
+++ b/nintendo.html
@@ -19,7 +19,7 @@
        
         <ul >
             <ul class="princip_ul" >
-                <li><a href="#" class="active" >Home  </a></li>
+                <li><a href="index.html" class="active" >Home  </a></li>
                 <li>
                   <a href="sony.html">Sony ▾</a>
                   <ul class="dropdown">
