--- a/snes.html
+++ b/snes.html
@@ -15,7 +15,7 @@
 <body>
     
     <header id="nav" >
-        <h2><a href="#" class="logo">RetroGaming</a></h2>
+        <h2><a href="index.html" class="logo">RetroGaming</a></h2>
        
         <ul >
             <ul class="princip_ul" >
