--- a/shinobi.html
+++ b/shinobi.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <section id="container">
-        <a id="retour" href="http://127.0.0.1:5500/mastersystem.html"><input type="button" value="Retour aux jeux" ></a>
+        <a id="retour" href="http://127.0.0.1:5500/test.html"><input type="button" value="Retour aux jeux" ></a>
             <img id="jaquette" src="img/mastersystem/shinobi.jpg" alt="">   
         <article id="description">
             <h1 id="titre">SHINOBI (1988)</h1>
