--- a/console3.html
+++ b/console3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Console Xbox 360</title>
-    <link rel="stylesheet" href="console3.css">
+    <link rel="stylesheet" href="css/console3.css">
 </head>
 <body>
 
@@ -41,22 +41,22 @@
         <input type="button" value="Voir détails">
     </figure>
     <figure id="quatre">
-        <div class="bordure" ></div>
-        <img class="image" src="img\dancecentral3.jpg" alt="">
+        <div class="link" ></div>
+        <a href="dance3.html"><img class="image" src="img\dancecentral3.jpg" alt=""></a>
         <figcaption>DANCE CENTRAL 3 (2012)</figcaption>
-        <input type="button" value="Voir détails">
+        <a href="dance3.html"><input type="button" value="Voir détails"></a>
     </figure>
     <figure id="cinq">
-        <div class="bordure" ></div>
-        <img class="image" src="img\minecraft 360.jpg" alt="">
+        <div class="link" ></div>
+        <a href="minecraft.html"><img class="image" src="img\minecraft 360.jpg" alt=""></a>
         <figcaption>MINECRAFT (2012)</figcaption>
-        <input type="button" value="Voir détails">
+        <a href="minecraft.html"><input type="button" value="Voir détails"></a>
     </figure>
     <figure id="six">
-        <div class="bordure" ></div>
-        <img class="image" src="img\gta v 360.jpg" alt="">
+        <div class="link" ></div>
+        <a href="gta5.html"><img class="image" src="img\gta v 360.jpg" alt=""></a>
         <figcaption>GTA V (2013)</figcaption>
-        <input type="button" value="Voir détails">
+        <a href="gta5.html"><input type="button" value="Voir détails"></a>
     </figure>
 </div>
 
