--- a/dance3.html
+++ b/dance3.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dance Central 3</title>
-    <link rel="stylesheet" href="dance3.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dance3.css">
     <script src="fa/js/all.js"></script>
 
 </head>
