--- a/fable.html
+++ b/fable.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fable</title>
-    <link rel="stylesheet" href="fable.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fable.css">
     <script src="fa/js/all.js"></script>
 
 </head>
