--- a/gta5.html
+++ b/gta5.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GTA V</title>
-    <link rel="stylesheet" href="gta5.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/gta5.css">
     <script src="fa/js/all.js"></script>
 
 </head>
