--- a/halo2.html
+++ b/halo2.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halo 2</title>
-    <link rel="stylesheet" href="halo2.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/halo2.css">
     <script src="fa/js/all.js"></script>
 
 </head>
