--- a/minecraft.html
+++ b/minecraft.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft</title>
-    <link rel="stylesheet" href="minecraft.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/minecraft.css">
     <script src="fa/js/all.js"></script>
 
 </head>
