--- a/splinter.html
+++ b/splinter.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Splinter Cell</title>
-    <link rel="stylesheet" href="splinter.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/splinter.css">
     <script src="fa/js/all.js"></script>
 
 </head>
