--- a/nintendo.html
+++ b/nintendo.html
@@ -103,7 +103,7 @@ We will help gamers to buy and profite with thier games</pre>
             <div class="col-xs-6 col-md-3">
               <h6>Quick Links</h6>
               <ul class="footer-links">
-                <li><a href="#">About Us</a></li>
+                <li><a href="contact.html">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
                   <li><a href="#">Privacy Policy</a></li>
                 
